--- a/app/views/static/changelog.html.slim
+++ b/app/views/static/changelog.html.slim
@@ -11,7 +11,11 @@
 
     h3 Recent Changes
 
-    h4 February
+    h4 April 2020
+    ul
+      li Added the ability to export a shop to CSV. Look for the export link when viewing a shop. There could be some edge cases I've missed so expect possible issues. Big thanks to Austin for buying me <a href="https://www.buymeacoffee.com/celo" target="_blank">some coffee</a> and suggesting the idea!
+
+    h4 February 2019
     ul
       li
         =link_to 'Custom Shops', new_custom_shop_path
