feat: add survey

--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -15,6 +15,11 @@
       | Create A Free Shop
 
 .container
+  .row
+    .col-12.text-center
+      p
+        |  I'm thinking over what the future of this app is, if you have some time and interested in sharing some thoughts, please take this 
+        a[href="https://airtable.com/shrgTp4m2G1xAxZVv" target="_blank"] survey.
   .card-deck
     .card.mb-5
       .bg-primary.py-5.text-center.align-middle.text-white.customize-card-header
@@ -40,8 +45,8 @@
         h4.card-title Share
         p.card-text
           | Once your shop is generated, share the link with the rest of the group to make buying items a breeze
-  .row
-    .col-12.text-center
-      p
-        | Check out the recent changes and upcoming features: 
-        a[href="/changelog"] The Changelog
+  / .row
+  /   .col-12.text-center
+  /     p
+  /       | Check out the recent changes and upcoming features: 
+  /       a[href="/changelog"] The Changelog
