--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -17,9 +17,9 @@
 .container
   .row
     .col-12.text-center
-      p
-        |  I'm thinking over what the future of this app is, if you have some time and interested in sharing some thoughts, please take this 
-        a[href="https://airtable.com/shrgTp4m2G1xAxZVv" target="_blank"] survey.
+      h3.mb-5
+        |  SWRPG Shop is now open source! Know some Ruby and React? Want to fix some stuff? Improve other stuff? Add a new feature?! 
+        a[href="https://github.com/MarceloAlves/swrpg-shop" target="_blank"] Have at it!
   .card-deck
     .card.mb-5
       .bg-primary.py-5.text-center.align-middle.text-white.customize-card-header
