--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application'
+    script[defer data-domain="swrpg-shop.com" src="https://plausible.io/js/script.js"]
   body[class="d-flex flex-column #{controller_name} #{action_name}" data-turbolinks="#{content_for?(:body_attributes) ? yield(:body_attributes) : 'true'}"]
     = render 'layouts/analytics' if Rails.env.production?
     = render 'layouts/navigation/navbar'
